--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         setLogLevel('debug');
 
         // Global variables provided by the Canvas environment
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+        const appId = 'fc24-auction-draft'; // Valor fijo para evitar inconsistencias
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
         const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
@@ -1095,3 +1095,4 @@
     </script>
 </body>
 </html>
+
